<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OPR FRC 2014</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="title_activity_reg_info_interface">Regional Interface</string>
    <string name="title_activity_team_interface">Team Interface</string>
    <string name="title_activity_help_screen">Help Screen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_fragment">Settings</string>
    <string name="pref_data_title">Data Usage</string>
    <string name="pref_year_title">Default Year</string>
    <string name="pref_year_summary">Change the year the app pulls data from</string>
    <string name="pref_autoScroll">Auto-Scroll</string>
    <string name="pref_autoScroll_summary">Allow the RSS feed on the main page to automatically scroll</string>
    <string name="pref_rss_title">RSS Feed</string>
    <string name="pref_rss_summary">Edit RSS feed settings</string>
    <string name="pref_displayWebsite">Display Website</string>
    <string name="pref_displayWebsite_summary">Allow a website preview to display on a team page</string>
    <string name="pref_autoUpdate">Auto-Update</string>
    <string name="pref_autoUpdate_summary">Allow the RSS feed on the main page to automatically update</string>
    <string name="main_help_text">Search regional/team</string>
    <string name="main_content_desc">MSC 2013 - Photo by Dan Ernst</string>
    <string name="main_button">Search</string>
    <string name="author">Created by Michael Ray</string>
    <string name="tab0">Info</string>
    <string name="tab1">Teams</string>
    <string name="tab2">Rankings</string>
    <string name="tab3">Stats</string>
    <string name="tab4">Matches</string>
    <string name="tab5">Awards</string>
    <string name="tUpdate">Successfully Updated</string>
    <string name="fUpdate">Unsuccessful Update</string>
    <string name="errorM">Invalid internet connection, data or other issue. Please try again later.</string>
    <string name="updateS">Update Status</string>
    <string name="overflow">Overflow</string>
    <string name="sort">Sort</string>
    <string name="sortTeam">By Team</string>
    <string name="sortOPR">By OPR</string>
    <string name="sortMax">By Max Score</string>
    <string name="sortAOPR">By Auton OPR</string>
    <string name="sortTOPR">By Teleop OPR</string>
    <string name="sortEOPR">By Climb(13)/Assist(14) OPR</string>
    <string name="sortAvg">By Average Pts</string>
    <string name="sortRank">By Rank</string>
    <string name="sortRecord">By Record</string>
    <string name="sortAPts">By Auton Pts</string>
    <string name="sortTPts">By Teleop Pts</string>
    <string name="sortEPts">By Climb(13)/Assists(14) Pts</string>
    <string name="firstWebsite">http://www2.usfirst.org/</string>
    <string name="awardType">awards</string>
    <string name="matchType">matchresults</string>
    <string name="rankType">rankings</string>
    <string name="statType">statistics</string>
    <string name="title_activity_match_predictor">Predictions</string>
	<string name="matchPredictTeam">Team</string>
	<string name="matchPredictOPR">OPR</string>
	<string name="matchPredictScore">Score:</string>
	<string name="matchPredictAuton">Auton:</string>
	<string name="matchPredictTeleop">Teleop:</string>
	<string name="matchPredictEnd13">Climb:</string>
	<string name="matchPredictEnd14">Assists:</string>
	<string name="action_acronyms">Acronyms</string>
	<string name="acro13">OPR - Offensive Power Ranking\n
	    AOPR - Auton OPR\n
	    TOPR - Teleop OPR\n
	    COPR - Climb OPR\n
	    QS - Qualifying Score\n
	    A - Auton Points\n
	    T - Teleop Points\n
	    C - Climb Points</string>
	<string name="acro14">OPR - Offensive Power Ranking\n
	    AOPR - Auton OPR\n
	    TOPR - Teleop/Truss/Catch OPR\n
	    AsOPR - Assists OPR\n
	    QS - Qualifying Score\n
	    A - Auton Points\n
	    T - Teleop/Truss/Catch Points\n
	    As - Assists Points</string>
</resources>
